# public_knowledge_base

./: LICENSE  README.md
B.Sc. Computer Science/: readme.md
B.Sc. Computer Science/PUCGO - Beecrowd Problems/: 1002.cpp  1003.cpp  1005.cpp  1006.cpp  1007.cpp  1010.cpp  1011.cpp  1013.cpp  1014.cpp  1016.cpp  1019.cpp  1037.cpp  1044.cpp  1045.cpp  1046.cpp  1047.cpp  1048.cpp  1050.cpp  1051.cpp  1065.cpp  1066.cpp  1072.cpp  1073.cpp  1074.cpp  1075.cpp  1098.cpp  1114.cpp  1116.cpp  1117.cpp  1131.cpp  1145.cpp  1151.cpp  1173.cpp  1177.cpp  1178.cpp  1467.cpp  1789.cpp  1828.cpp  1930.cpp  1959.cpp  (+7 more)
BS Computer Science/PUCGO - Beecrowd Problems/: 1001.cpp  1004.cpp  1008.cpp  1009.cpp  1012.cpp  1015.cpp  1017.cpp  1018.cpp  1020.cpp  1035.cpp  1036.cpp  1038.cpp  1040.cpp  1041.cpp  1042.cpp  1043.cpp  1049.cpp  1052.cpp  1059.cpp  1064.cpp  1067.cpp  1070.cpp  1078.cpp  1080.cpp  1095.cpp  1097.cpp  1133.cpp  1142.cpp  1143.cpp  1153.cpp  1154.cpp  1155.cpp  1160.cpp  1180.cpp  1437.cpp  1858.cpp  1914.cpp  1983.cpp  2313.cpp  2547.cpp  (+1 more)
BTech Big Data & Artifical Intelligence/2 - Listas Encadeadas Simples/: ListaEncadeada.py  Nodo.py  main.py
Data Engineering/: readme.md
Data Engineering/Alura - Engenharia de Dados/: poetry.txt  pyproject.toml  tips.txt
Data Engineering/Alura - Engenharia de Dados/data_raw/: dados_empresaA.json  dados_empresaB.csv
Data Engineering/Alura - Engenharia de Dados/notebooks/: exploration.ipynb
Data Engineering/HWBT - Engenharia de Dados/hwbt03_sql_docker/: docker-compose.yml  pyproject.toml  readme.md
(+66 files in other folders)
