[tool.poetry]
name = "alura - engenharia de dados"
version = "0.1.0"
description = ""
authors = ["Leandro Amoras <amorasleandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
